--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "cross-env": "^7.0.3",
     "express": "^4.18.2",
+    "heatmap.js": "^2.0.5",
     "open": "^8.4.1",
     "seeso": "^0.1.12"
   },
