--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cross-env": "^7.0.3",
     "express": "^4.18.2",
     "heatmap.js": "^2.0.5",
+    "html2canvas": "^1.4.1",
     "open": "^8.4.1",
     "seeso": "^0.1.12"
   },
