--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "node ./node_modules/npm-run-all/bin/npm-run-all -p -r dev:watch dev:hot-reload",
     "build": "node ./node_modules/parcel-bundler/bin/cli build ./src/index.js --target node --out-dir ./dist/",
     "lint": "node ./node_modules/eslint/bin/eslint . --ext .js --fix",
-    "g": "cross-env NODE_ENV=development node src/index.js",
+    "project": "cross-env NODE_ENV=development node src/index.js",
     "gaze": "cross-env NODE_ENV=development node src/index.js src/public/home/index.html 8082"
   },
   "repository": {
