--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A JavaScript project",
   "main": "./dist/index.js",
   "scripts": {
+    "start": "cross-env NODE_ENV=development node src/index.js",
     "project": "cross-env NODE_ENV=development node src/index.js"
   },
   "repository": {
